2009-02-23  Paolo Borelli  <pborelli@katamail.com>

	* glib/gutf8.c (_g_utf8_make_valid):
	sanity check the input paramter. 

2009-02-23  Tor Lillqvist  <tml@novell.com>

	Bug 570501 - g_win32_get_system_data_dirs uses invalid conversion
	of function pointer to object pointer

	* glib/gutils.c (g_win32_get_system_data_dirs_for_module): Change
	the type of the function's parameter to be explicitly a function
	pointer.

	* glib/gutils.h (_g_win32_get_system_data_dirs): Modify
	declaration and the only caller, the inline
	_g_win32_get_system_data_dirs(), accordingly. Add comments
	pointing out these are internal GLib functions.

2009-02-22  Matthias Clasen  <mclasen@redhat.com>

	Bug 572151 – “it's” and “its” confused in docs and comments

	* Fix "it's" vs "its" confusion throughout the source. Patch
	by Will Thompson.

2009-02-22  Matthias Clasen  <mclasen@redhat.com>

	Bug 572464 – Doc for g_file_get_contents

	* glib/gfileutils.c (g_file_get_contents): Improve docs. Pointed
	out by Øystein Johansen.

2009-02-22  Matthias Clasen  <mclasen@redhat.com>

	Bug 572672 – glib/gthread.c: argument is different type

	* glib/gthread.c (g_once_init_leave): Add a necessary cast back.
	Pointed out by Kazuki Iwamoto.

2009-02-17  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2009-02-17  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.8 ===

2009-02-17  Matthias Clasen  <mclasen@redhat.com>

	Fix strict aliasing warnings and viiolations to make GLib and
	GLib users buildable with gcc 4.4. Patch by Jakub Jelinek.

	* glib/gatomic.[hc]: Add G_GNUC_MAY_ALIAS to pointer arguments,
	fix macro versions to only operate on objects of the same size.

	* glib/gdataset.c:
	* glib/gthread.[hc]:
	* glib/gdatasetprivate.h: Remove unnecessary casts in 
	g_atomic_pointer_get calls.
	
2009-02-16  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2009-02-16  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.7 ===
